updated to latest draft and fixed x overflow on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -133,10 +133,15 @@ a {
     transition: all 0.2s ease-in-out;
     color: black;
     line-height: 1.953em;
+    position: relative;
+    z-index: 999;
 }
 
 
 p a {
+    text-decoration: underline #FF04D1;
+    -moz-text-decoration-style: wavy;
+    text-decoration-style: wavy;
     text-decoration: underline wavy #FF04D1;
 }
 
@@ -304,11 +309,6 @@ iframe {
     z-index: 999;
 }
 
-a {
-    position: relative;
-    z-index: 999;
-}
-
 /*
 .border {
     position: relative;
@@ -462,7 +462,7 @@ body {
     max-width: 450px;
     background: white;
     box-shadow: rgba(100,100,100,0.2) 6px 2px 10px;
-    z-index: 999;
+    z-index: 1001;
     overflow-y: auto;
     overflow-x: hidden;
     left: -100%;
@@ -566,9 +566,9 @@ ol li:hover {
         border-bottom: 4px solid #85FF64;
     }
 
-    #experience {
+    /* #experience {
         width: 120%;
-    }
+    } */
 
     /* TOUCH DEVICES */
     @media only screen and (hover: none) {
